<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RIT Scheduler</string>
    <string name="add">Add</string>
    <string name="professor">Professor</string>
    <string name="search_for_a_course">Search for a Course</string>

    <string name="search_hint">CSCI 250–01</string>
    <string name="refresh">refresh</string>
    <string name="widget_calendar">widget calendar</string>
    <string name="next">next</string>
    <string name="previous">previous</string>

    <!--Errors-->
    <string name="error">Error</string>
    <string name="course_term_ambigious_error_msg">Search term was too ambigious. Please try again.</string>
    <string name="no_results_error">No results found.</string>
    <string name="generic_error">Something weird happened. Try again later.</string>
    <string name="save_error">Unable to save this course. Please try again later.</string>
    <string name="error_retrieving_saved_courses">Error retrieving saved courses.</string>
    <string name="confirm">Confirm</string>
    <string name="delete_course_error">Unable to delete this course. Please try again later.</string>
    <string name="update_course_error">Unable to update this course. Please try again later.</string>
    <string name="action_not_supported">Action Not Supported</string>

    <!--Settings-->
    <string name="calendar_settings_title">Calendar Settings</string>

    <!--First Visible Day-->
    <string name="first_visible_day_key">first_visible_day_key</string>
    <string name="first_visible_day_title">First Visible Day</string>
    <string name="first_visible_day_summary">First day to display on start up.</string>
    <string name="first_visible_day_default_val">Current Day</string>
    <string-array name="first_visible_day_items">
        <item>@string/first_visible_day_default_val</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="first_visible_day_values">
        <item>0</item>
        <item>7</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!--Number of Visible Days-->
    <string name="num_visible_days_key">num_of_visible_days</string>
    <string name="num_of_visible_days_title">Number of Visible Days</string>

    <!--Auto Limit Time-->
    <string name="auto_limit_time">Auto Limit Time</string>
    <string name="auto_limit_time_key">auto_limit_time_key</string>
    <string name="auto_limit_summary">Set calendar hours to fit around events.</string>

    <!--Visible Hours-->
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="hour_range_key">hour_range_key</string>
    <string name="calendar_hours_default_val" tools:ignore="TypographyDashes">0-1380</string>
    <string name="calendar_hours_summary">Hours to display on Calendar</string>
    <string name="calendar_hours_title">Calendar Hours</string>
    <string name="time_range_error">Start Time must be before End Time</string>

    <!--About-->
    <string name="about_key">about_key</string>
    <string name="about_title">About</string>
    <string name="about_summary">Application Information</string>
    <string name="rate_app_title">Did you like the app?</string>
    <string name="rate_app_message">Let me know what you think :)</string>
    <string name="rit_scheduler_version">RIT Scheduler Version</string>
    <string name="app_summary">Easily look up and keep track of your courses. Exclusively for RIT students ;)</string>
    <string name="developer">Developer</string>
    <string name="developer_name"><a href="https://jlurena.me">Jean Luis Urena</a></string>
    <string name="github_repo"><a href="https://github.com/jlurena/rit_scheduler">GitHub</a></string>
    <string name="open_sourced_at">Open Sourced At</string>
    <string name="report_bugs_features">Report bugs and new features:\n<a href="eljean@live.com">eljean@live.com</a></string>
    <string name="close">Close</string>

</resources>
