<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:divider="@drawable/horizontal_dividers"
    android:dividerPadding="10dp"
    android:orientation="vertical"
    android:showDividers="middle">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/app_version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/app_version"
            android:text="@string/rit_scheduler_version"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/app_version_label"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/app_version"
            android:maxLines="3"
            android:text="@string/app_summary"
            android:textSize="12sp" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:linksClickable="true"
            android:text="@string/developer_name"
            android:textColorLink="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:lines="2"
            android:text="@string/report_bugs_features"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/developer_name" />
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_sourced_at"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/github_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:linksClickable="true"
            android:text="@string/github_repo"
            android:textColorLink="@android:color/holo_blue_dark" />
    </FrameLayout>


</LinearLayout>