<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/widget_margin">

    <ImageButton
        android:id="@+id/widget_next"
        android:src="@drawable/chevron_right"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next"
        android:layout_toEndOf="@+id/widget_previous" />
    <ImageButton
        android:id="@+id/widget_previous"
        android:src="@drawable/chevron_right"
        android:rotation="180"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/previous"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>
    <ImageButton
        android:id="@+id/widget_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/refresh"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

    <ListView
        android:id="@+id/widget_calendar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/widget_refresh"/>
</RelativeLayout>